# pdf2podcast

./: .gitignore  Dockerfile.api  Dockerfile.complete  Makefile  README.md  combined_api.py  combined_api_test.py  docker-compose-remote.yaml  docker-compose.yaml  models.json  out.txt  requirements.txt  ruff.toml  setup.sh  supervisord.conf  test.py  test_db.py  test_files.py  test_invalid_filetype.py  test_list.py
.github/workflows/: build-and-push.yaml  pr-test.yaml
AgentService/: Dockerfile  job_status.py  main.py  test_api.py
PDFService/: Dockerfile  README.md  main.py  requirements.txt  test_api.py
TTSService/: Dockerfile  README.md  main.py  test_api.py
notebooklm/: Chart.yaml  notebooklm-0.0.1.tgz  notebooklm-0.2.tgz  values.yaml
notebooklm/templates/: agent-service-deployment.yaml  agent-service-service.yaml  api-service-deployment.yaml  api-service-service.yaml  pdf-service-deployment.yaml  pdf-service-service.yaml  (+2 more)
services/AgentService/flexagent/python/: pyproject.toml
services/AgentService/flexagent/python/flexagent/: __init__.py
services/AgentService/flexagent/python/flexagent/backend/: __init__.py  base_backend.py  nim.py  registry.py
services/AgentService/flexagent/python/flexagent/engine/: __init__.py  dill_executor.py  engine.py  operator.py
services/AgentService/flexagent/python/flexagent/ops/llm/: llm.py
services/AgentService/flexagent/python/flexagent/ops/pdf/: __init__.py  pdf2markdown.py
services/AgentService/flexagent/python/flexagent/ops/search/: __init__.py  google.py
shared/: setup.py
tests/: prod-test.sh  test.py
(+55 files in other folders)
