[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "flexagent/__init__.py"

[project]
name = "flexagent"
dynamic = ["version"]
dependencies = ["jinja2==3.1.4", "python-dotenv", "openai", "pydantic", "dill", "requests"]
requires-python = ">= 3.9"
authors = [
    {name = "Bing Xu", email = "bixu@nvidia.com"}
]
maintainers = [
    {name = "Bing Xu", email = "bixu@nvidia.com"}
]

[project.optional-dependencies]
all = ["docling==1.13.0"]

[tool.setuptools.package-data]
"flexagent" = ["py.typed"]
